--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Add external font for left panel -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/freemetto" type="text/css"/>
+
 </head>
 <body>
     <div class="left-div">
