--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="left-div">
         <div class="logo-box">
-            <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="Odin Project Logo" class="logo">
+            <img src="gfx/login.svg" class="logo">
             <p>Signup</p>
         </div>
         <p>Photo by <a href="https://unsplash.com/@sepoys?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rohit Tandon</a> on <a href="https://unsplash.com/s/photos/mountain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
