Add initial right panel styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <p>Photo by <a href="https://unsplash.com/@sepoys?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rohit Tandon</a> on <a href="https://unsplash.com/s/photos/mountain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
     </div>
     <div class="right-div">
-        <p>This is not a real online service, but rather an example signup page. Your details will not be collected.</p>
+        <div>
+            <p>This is not a real online service, but rather an example signup page. Your details will not be collected.</p>
+            <p>Source code for this site can be found on <a href="https://github.com/Roualeyn/Odin-Project-05-Signup-Form">GitHub</a>.</p>
+        </div>
         <form action="">
             <div>
                 <p>First we need some details to create your account:</p>
@@ -31,9 +34,11 @@
                 <input type="password" name="Password" id="">
                 <input type="password" name="Confirm Password" id="">
             </div>
-            <button>Create Account</button>
         </form>
-        <p>Already have an account? <a href="">Log in</a></p>
+        <div>
+            <button>Create Account</button>
+            <p>Already have an account? <a href="">Log in</a></p>
+        </div>
     </div>
     
 </body>
