Add labels to form inputs

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <form action="">
             <div>
                 <p>First we need some details to create your account:</p>
-                <input type="text" name="First Name" id="">
-                <input type="text" name="Last Name" id="">
-                <input type="email" name="Email" id="">
-                <input type="tel" name="Phone Number" id="">
-                <input type="password" name="Password" id="">
-                <input type="password" name="Confirm Password" id="">
+                <label>First Name<input type="text" name="First Name" id="first-name"></label>
+                <label>Last Name<input type="text" name="Last Name" id="last-name"></label>
+                <label>Email<input type="email" name="Email" id="email"></label>
+                <label>Phone Number<input type="tel" name="Phone Number" id="phone-number"></label>
+                <label>Password<input type="password" name="Password" id="password"></label>
+                <label>Confirm Password<input type="password" name="Confirm Password" id="confirm-password"></label>
             </div>
         </form>
         <div>
