Change layout to grid

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         </div>
         <p>Photo by <a href="https://unsplash.com/@sepoys?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rohit Tandon</a> on <a href="https://unsplash.com/s/photos/mountain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
     </div>
-    <div class="right-div">
-        <div>
+        <div class="top-right-div">
             <p>This is not a real online service, but rather an example signup page. Your details will not be collected.</p>
             <p>Source code for this site can be found on <a href="https://github.com/Roualeyn/Odin-Project-05-Signup-Form">GitHub</a>.</p>
         </div>
@@ -35,11 +34,9 @@
                 <label>Confirm Password<input type="password" name="Confirm Password" id="confirm-password"></label>
             </div>
         </form>
-        <div>
+        <div class="bottom-right-div">
             <button>Create Account</button>
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
-    </div>
-    
 </body>
 </html>
