--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </form>
         <div class="bottom-right-div">
-            <button>Create Account</button>
+            <button form="signup-form" type="submit">Create Account</button>
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
 </body>
