--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="script.js" defer></script>
 
     <!-- Add external font for left panel -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/freemetto" type="text/css"/>
@@ -23,15 +24,15 @@
             <p>This is not a real online service, but rather an example signup page. Your details will not be collected.</p>
             <p>Source code for this site can be found on <a href="https://github.com/Roualeyn/Odin-Project-05-Signup-Form">GitHub</a>.</p>
         </div>
-        <form action="">
+        <form action="" method="post" id="signup-form">
             <div>
                 <p>First we need some details to create your account:</p>
-                <label>First Name<input type="text" name="First Name" id="first-name"></label>
-                <label>Last Name<input type="text" name="Last Name" id="last-name"></label>
-                <label>Email<input type="email" name="Email" id="email"></label>
-                <label>Phone Number<input type="tel" name="Phone Number" id="phone-number"></label>
-                <label>Password<input type="password" name="Password" id="password"></label>
-                <label>Confirm Password<input type="password" name="Confirm Password" id="confirm-password"></label>
+                <label>First Name<input type="text" name="First Name" id="first-name" required placeholder=" "></label>
+                <label>Last Name<input type="text" name="Last Name" id="last-name" required placeholder=" "></label>
+                <label>Email<input type="email" name="Email" id="email" required placeholder=" "></label>
+                <label>Phone Number<input type="tel" name="Phone Number" id="phone-number" placeholder=" "></label>
+                <label>Password<input type="password" name="Password" id="password" required  placeholder=" "><span id="password-asterisk"></span></label>
+                <label>Confirm Password<input type="password" name="Confirm Password" id="confirm-password" required placeholder=" "></label>
             </div>
         </form>
         <div class="bottom-right-div">
